--- a/cetus/cetus.vcxproj
+++ b/cetus/cetus.vcxproj
@@ -119,6 +119,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="cetus_define.h" />
+    <ClInclude Include="container\vector_ex.h" />
     <ClInclude Include="encode\base64.h" />
     <ClInclude Include="stringutil\stringutil.h" />
     <ClInclude Include="time\data_time.h" />
