--- a/cetus/cetus.vcxproj.filters
+++ b/cetus/cetus.vcxproj.filters
@@ -10,11 +10,11 @@
     <Filter Include="encode">
       <UniqueIdentifier>{9b00f32e-77c6-4dc3-87f8-3571e615a687}</UniqueIdentifier>
     </Filter>
-    <Filter Include="math">
-      <UniqueIdentifier>{037776bf-c74a-4d1b-92a8-2dc67e720d5a}</UniqueIdentifier>
-    </Filter>
     <Filter Include="container">
       <UniqueIdentifier>{c7a620a7-a0a6-4fd8-a345-3e075e717a33}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="url">
+      <UniqueIdentifier>{037776bf-c74a-4d1b-92a8-2dc67e720d5a}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -37,6 +37,12 @@
     <ClInclude Include="container\vector_ex.h">
       <Filter>container</Filter>
     </ClInclude>
+    <ClInclude Include="url\url.h">
+      <Filter>url</Filter>
+    </ClInclude>
+    <ClInclude Include="url\url_config.h">
+      <Filter>url</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
@@ -48,6 +54,9 @@
     </ClCompile>
     <ClCompile Include="time\data_time.cpp">
       <Filter>time</Filter>
+    </ClCompile>
+    <ClCompile Include="url\url.cpp">
+      <Filter>url</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
