--- a/cetus/cetus.vcxproj
+++ b/cetus/cetus.vcxproj
@@ -79,6 +79,8 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_MBCS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>.\</AdditionalIncludeDirectories>
+      <AdditionalOptions>/D _CRT_SECURE_NO_WARNINGS %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -87,7 +89,7 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <AdditionalIncludeDirectories>.\</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>PLATFORM_WINDOWS;_MBCS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_MBCS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalOptions>/D _CRT_SECURE_NO_WARNINGS %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
   </ItemDefinitionGroup>
@@ -118,17 +120,40 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="cetus_define.h" />
+    <ClInclude Include="container\dynamic_bitset.h" />
+    <ClInclude Include="container\intrusive_list.h" />
+    <ClInclude Include="container\mpsc_queue.h" />
+    <ClInclude Include="container\ringbuffer.h" />
+    <ClInclude Include="core.h" />
     <ClInclude Include="container\vector_ex.h" />
+    <ClInclude Include="delegate.h" />
     <ClInclude Include="encode\base64.h" />
+    <ClInclude Include="enum_as_byte.h" />
+    <ClInclude Include="event_dynamic.h" />
+    <ClInclude Include="event_static.h" />
+    <ClInclude Include="gsl_assert.h" />
+    <ClInclude Include="guid\fguid.h" />
+    <ClInclude Include="guid\snowflake.h" />
+    <ClInclude Include="self_register.h" />
     <ClInclude Include="stringutil\stringutil.h" />
+    <ClInclude Include="thread\runnable.h" />
+    <ClInclude Include="thread\runnable_thread.h" />
+    <ClInclude Include="timer\timekeeper.h" />
+    <ClInclude Include="timer\timer.h" />
     <ClInclude Include="time\data_time.h" />
     <ClInclude Include="time\system_time.h" />
     <ClInclude Include="time\timespan.h" />
+    <ClInclude Include="type_traits_ex.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="container\dynamic_bitset.cpp" />
+    <ClCompile Include="container\ringbuffer.cpp" />
     <ClCompile Include="encode\base64.cpp" />
+    <ClCompile Include="guid\fguid.cpp" />
+    <ClCompile Include="guid\snowflake.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="thread\runnable_thread.cpp" />
+    <ClCompile Include="timer\timer.cpp" />
     <ClCompile Include="time\data_time.cpp" />
     <ClCompile Include="time\timespan.cpp" />
   </ItemGroup>
