change file tree

--- a/cetus.vcxproj.filters
+++ b/cetus.vcxproj.filters
@@ -80,6 +80,7 @@
     <ClInclude Include="event_static.h" />
     <ClInclude Include="event_dynamic.h" />
     <ClInclude Include="self_register.h" />
+    <ClInclude Include="global_macro.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
