--- a/cetus.vcxproj
+++ b/cetus.vcxproj
@@ -26,7 +26,7 @@
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
@@ -70,6 +70,10 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <OutDir>..\..\debug\lib\$(ProjectName)\</OutDir>
+    <IntDir>..\..\intermediate\lib\$(ProjectName)\</IntDir>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <OutDir>..\..\debug\lib\$(ProjectName)\</OutDir>
     <IntDir>..\..\intermediate\lib\$(ProjectName)\</IntDir>
   </PropertyGroup>
@@ -131,6 +135,7 @@
     <ClInclude Include="enum_as_byte.h" />
     <ClInclude Include="event_dynamic.h" />
     <ClInclude Include="event_static.h" />
+    <ClInclude Include="global_macro.h" />
     <ClInclude Include="gsl_assert.h" />
     <ClInclude Include="guid\fguid.h" />
     <ClInclude Include="guid\snowflake.h" />
