--- a/cetus.vcxproj
+++ b/cetus.vcxproj
@@ -125,6 +125,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="container\dynamic_bitset.h" />
+    <ClInclude Include="container\dynamic_buffer.h" />
     <ClInclude Include="container\intrusive_list.h" />
     <ClInclude Include="container\mpsc_queue.h" />
     <ClInclude Include="container\ringbuffer.h" />
@@ -138,6 +139,7 @@
     <ClInclude Include="gsl_assert.h" />
     <ClInclude Include="guid\fguid.h" />
     <ClInclude Include="guid\snowflake.h" />
+    <ClInclude Include="math\math_ex.h" />
     <ClInclude Include="self_register.h" />
     <ClInclude Include="thread\runnable.h" />
     <ClInclude Include="thread\runnable_thread.h" />
@@ -152,6 +154,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="container\dynamic_bitset.cpp" />
+    <ClCompile Include="container\dynamic_buffer.cpp" />
     <ClCompile Include="container\ringbuffer.cpp" />
     <ClCompile Include="encode\base64.cpp" />
     <ClCompile Include="guid\fguid.cpp" />
