--- a/cetus.vcxproj
+++ b/cetus.vcxproj
@@ -166,6 +166,7 @@
     <ClCompile Include="guid\fguid.cpp" />
     <ClCompile Include="guid\snowflake.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="module\module_manager.cpp" />
     <ClCompile Include="thread\runnable_thread.cpp" />
     <ClCompile Include="timer\timer.cpp" />
     <ClCompile Include="time\data_time.cpp" />
