--- a/cetus.vcxproj
+++ b/cetus.vcxproj
@@ -134,11 +134,13 @@
     <ClInclude Include="core.h" />
     <ClInclude Include="delegate.h" />
     <ClInclude Include="encode\base64.h" />
-    <ClInclude Include="entity\origin_module_interface.h" />
-    <ClInclude Include="entity\origin_component.h" />
+    <ClInclude Include="entity\component.h" />
+    <ClInclude Include="entity\entity.h" />
+    <ClInclude Include="entity\update_interface.h" />
+    <ClInclude Include="entity\singleton_component.h" />
     <ClInclude Include="entity\origin_entity.h" />
-    <ClInclude Include="entity\origin_util.h" />
-    <ClInclude Include="entity\origin_component_auto_register.h" />
+    <ClInclude Include="entity\ecs_util.h" />
+    <ClInclude Include="entity\singleton_component_auto_register.h" />
     <ClInclude Include="enum_as_byte.h" />
     <ClInclude Include="event_dynamic.h" />
     <ClInclude Include="event_static.h" />
@@ -166,6 +168,8 @@
     <ClCompile Include="container\dynamic_buffer.cpp" />
     <ClCompile Include="container\ringbuffer.cpp" />
     <ClCompile Include="encode\base64.cpp" />
+    <ClCompile Include="entity\component.cpp" />
+    <ClCompile Include="entity\entity.cpp" />
     <ClCompile Include="entity\origin_entity.cpp" />
     <ClCompile Include="guid\fguid.cpp" />
     <ClCompile Include="guid\snowflake.cpp" />
