--- a/cetus.vcxproj.filters
+++ b/cetus.vcxproj.filters
@@ -110,19 +110,16 @@
     <ClInclude Include="entity\entity.h">
       <Filter>entity</Filter>
     </ClInclude>
-    <ClInclude Include="entity\update_interface.h">
-      <Filter>entity</Filter>
-    </ClInclude>
     <ClInclude Include="entity\component.h">
       <Filter>entity</Filter>
     </ClInclude>
     <ClInclude Include="entity\ecs_util.h">
       <Filter>entity</Filter>
     </ClInclude>
-    <ClInclude Include="entity\singleton_component.h">
+    <ClInclude Include="entity\singleton_component_auto_register.h">
       <Filter>entity</Filter>
     </ClInclude>
-    <ClInclude Include="entity\singleton_component_auto_register.h">
+    <ClInclude Include="entity\updatable_interface.h">
       <Filter>entity</Filter>
     </ClInclude>
   </ItemGroup>
