--- a/cetus.vcxproj.filters
+++ b/cetus.vcxproj.filters
@@ -146,11 +146,12 @@
     <ClInclude Include="timer\schedule_timer.h">
       <Filter>timer</Filter>
     </ClInclude>
-    <ClInclude Include="timer_handler.h">
-      <Filter>timer</Filter>
-    </ClInclude>
     <ClInclude Include="container\make_heap.h">
       <Filter>container</Filter>
+    </ClInclude>
+    <ClInclude Include="global_variables.h" />
+    <ClInclude Include="timer\timer_handle.h">
+      <Filter>timer</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -194,5 +195,6 @@
     <ClCompile Include="container\dynamic_buffer.cpp">
       <Filter>container</Filter>
     </ClCompile>
+    <ClCompile Include="global_variables.cpp" />
   </ItemGroup>
 </Project>
