--- a/cetus.vcxproj
+++ b/cetus.vcxproj
@@ -168,6 +168,7 @@
     <ClInclude Include="time\timespan.h" />
     <ClInclude Include="type_traits_ex.h" />
     <ClInclude Include="util\debug_util.h" />
+    <ClInclude Include="util\file_util.h" />
     <ClInclude Include="util\string_util.h" />
     <ClInclude Include="util\vector_util.h" />
   </ItemGroup>
